# fun-ball-game

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
modules/: FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
src/: Application.cpp  Application.h  Audio.cpp  Audio.h  Ball.cpp  Ball.h  Game.cpp  Game.h  Mainmenu.cpp  Mainmenu.h  Scene.h  Text.h  Texture.cpp  Texture.h  Utils.h  main.cpp
